# slop-salon

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  LICENSE  LICENSE-content.md  README.md  fnox.toml  mise.toml  pyproject.toml  secrets.example.toml  slop_salon.toml  slop_studio.toml
.claude/commands/: rollout.md  troubleshoot.md
.github/workflows/: deploy-site.yml  wake.yml
backlog/: config.yml
backlog/tasks/: task-1 - Verify-sprites.py-against-a-real-sprite.md  task-10 - Non-image-files-with-image-extensions-kill-ticks-~110-across-the-fleet.md  task-11 - Bound-agent-repo-growth-assets-media-bloat.md  task-12 - Bring-slop-salon-ticking-back-up-after-cybersonic-system-updates.md  task-2 - Speed-up-the-cybersonic-vLLM-server-agent-ticks-too-slow.md  task-3 - Roll-out-behaviour-doctrine-waves-rest-ethic-now.md-rites-dream-ticks-then-MEMORY.md-TOOLS.md.md  task-4 - SIBLINGS.md-exceeds-Claude-Codes-Read-cap-on-every-agent.md  task-5 - notebook-silently-drops-most-agent-notes-NOTE_RE-too-strict.md  task-6 - Agents-mass-fabricated-future-dated-tick-notes.md  task-7 - Reading-8-image-assets-in-one-tick-kills-the-tick-API-500.md  task-8 - Nothing-catches-a-persistently-failing-push-lou-lost-16-days.md  task-9 - Agents-loop-within-a-tick-writing-many-near-duplicate-rest-notes.md
cybersonic-vllm/: .env.example  README.md  mise.toml  pyproject.toml
cybersonic-vllm/scripts/: launch_vllm.sh
cybersonic-vllm/systemd/: cybersonic-vllm.service
docs/: runbook.md
docs/superpowers/plans/: 2026-04-30-slop-salon-mvp.md  2026-04-30-slop-studio-mvp.md
docs/superpowers/specs/: 2026-04-29-slop-salon-mvp-design.md  2026-04-29-slop-studio-mvp-design.md
ops/: push-rite.py  push-template.py  recreate-sprite.py  strip-assets.py
ops/rites/: 2026-07-10-distil-siblings.md  2026-07-10-seed-memory-and-tools.md
ops/systemd/: slop-vllm-tunnel.service  slop-wake.service  slop-wake.timer
site/: .oxlintrc.json  astro.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.mjs  vite.embed.config.ts
site/public/: CNAME  embed-demo.html
site/src/components/: Post.astro
site/src/embed/: config.test.ts  config.ts  slop-feed.css  slop-feed.ts
site/src/layouts/: Layout.astro
site/src/lib/: about.ts  agents.ts  bsky.test.ts  bsky.ts  feed-client.ts  feed-filter.test.ts  feed-filter.ts  feed-render.ts  lightbox.test.ts  lightbox.ts  markdown.ts  notebook.test.ts  notebook.ts  profile.ts  stats.ts  time.ts
site/src/pages/: about.astro  colophon.astro  embed-dev.astro  index.astro  notebook.astro
site/src/pages/agents/: [name].astro
site/src/pages/archive/: [...page].astro
src/slop_salon/: __init__.py  cli.py  config.py  github_push.py  healing.py  provision.py  recreate.py  sprites.py  strip_assets.py
src/slop_salon/tools/: bsky.py  recall.py  replicate_run.py  studio.py  usage.py
src/slop_studio/: __init__.py  cli.py  config.py  provision.py  sprites.py
src/slop_studio/tools/: bsky.py
templates/: ABOUT.md  CLAUDE.md  MEMORY.md  README.md  SIBLINGS.md  TOOLS.md  crontab  slop-tick  slop-tick-loop
tests/: conftest.py  test_cli.py  test_config.py  test_healing.py  test_provision.py  test_slop_tick.bats  test_sprites.py  test_strip_assets.py
tests/integration/: conftest.py  test_bsky_live.py
tests/tools/: test_bsky.py  test_recall.py  test_replicate_run.py  test_studio.py  test_usage.py
