[project]
name = "slop-studio"
version = "0.1.0"
description = "Slop Salon multi-agent harness"
readme = "README.md"
authors = [
    { name = "Ben Swift", email = "ben@benswift.me" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
slop-studio = "slop_studio:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
