[project]
name = "slop-salon"
version = "1.0.0"
description = "Slop Salon multi-agent harness"
readme = "README.md"
authors = [{ name = "Ben Swift", email = "ben@benswift.me" }]
requires-python = ">=3.14"
dependencies = ["typer>=0.12", "httpx>=0.27", "replicate>=0.34"]

[project.scripts]
# Admin CLI
slop = "slop_salon.cli:app"
# Agent-side tools (installed in each sprite)
bsky = "slop_salon.tools.bsky:app"
replicate = "slop_salon.tools.replicate_run:app"
slop-usage = "slop_salon.tools.usage:app"
slop-recall = "slop_salon.tools.recall:app"
slop-studio = "slop_salon.tools.studio:app"

[dependency-groups]
dev = ["pytest>=8", "pytest-httpx>=0.30", "ruff>=0.5"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
  "B008",
] # typer requires function calls (typer.Option) in argument defaults

[tool.ruff.lint.per-file-ignores]
# Long shell-recipe lines in the cookbook strings must stay unwrapped so
# they render as copy-pasteable one-liners.
"src/slop_salon/tools/bsky.py" = ["E501"]
"src/slop_salon/tools/replicate_run.py" = ["E501"]

[tool.pytest.ini_options]
markers = [
  "integration: requires real API credentials; opt-in (run with `pytest -m integration`)",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]
